@@ -14,7 +14,8 @@
  ! Custom mapsource from RMaps SQLite atlas shows wrong zoom levels 
  - Removed map source: Open Cycle Map (request by Andy Allan)
  + New map source: OSMapa-Topo (Poland)
- + Map source tile store coverage: button for hiding colored layer added 
+ + Map source tile store coverage: button for hiding colored layer added
+ + OziExplorer/Trekbuddy: MM1B calculation improved (patch by MrPete #3026830) 
 
 1.9 beta 6 (2011-06-21)
  + New atlas format: Geocaching Live offline maps
